# clone-airbnb

./: .gitignore  README.md
backend/djangobnb/: .env  .pdm-python  Dockerfile  Makefile  README.md  commands.sh  docker-compose.override.yaml  docker-compose.yaml  manage.py  package-lock.json  pyproject.toml
backend/djangobnb/.devcontainer/: devcontainer.json
backend/djangobnb/data/: dump.rdb
backend/djangobnb/src/: db.sqlite3
backend/djangobnb/src/django_project/: asgi.py  urls.py  wsgi.py
backend/djangobnb/src/django_project/chat_app/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  token_auth.py  urls.py  views.py
backend/djangobnb/src/django_project/chat_app/migrations/: 0001_initial.py  0002_conversationmessage_created_by.py
backend/djangobnb/src/django_project/property_app/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/djangobnb/src/django_project/property_app/migrations/: 0001_initial.py  0002_reservation.py  0003_reservation_favorited.py  0004_remove_reservation_favorited_property_favorited.py
backend/djangobnb/src/django_project/settings/: _base.py  dev.py  develop.py
backend/djangobnb/src/django_project/useraccount_app/: admin.py  apps.py  auth.py  models.py  security.py  serializers.py  tasks.py  urls.py  user_redirect.py  views.py
backend/djangobnb/src/django_project/useraccount_app/migrations/: 0001_initial.py  0002_user_username.py  0003_remove_user_username_alter_user_avatar_and_more.py  0004_user_email_verified.py
frontend/nextbnb/: README.md  package-lock.json  package.json
frontend/nextbnb/app/: layout.tsx  page.tsx
frontend/nextbnb/app/components/: FavoriteButton.tsx  LogoutButton.tsx
frontend/nextbnb/app/components/home/: Categories.tsx
frontend/nextbnb/app/components/hooks/: useLoginModal.ts  useSearchModels.ts
frontend/nextbnb/app/components/inbox/: Conversation.tsx  ConversationDetail.tsx
frontend/nextbnb/app/components/landlords/: ContactButton.tsx
frontend/nextbnb/app/components/modals/: AddPropertyModal.tsx  LoadingModal.tsx  LoginModal.tsx  Modal.tsx  SearchModal.tsx  SingupModal.tsx
frontend/nextbnb/app/components/navbar/: AddPropertyButton.tsx  MenuLink.tsx  NavBar.tsx  SearchFilters.tsx  UserNav.tsx
frontend/nextbnb/app/inbox/: page.tsx
frontend/nextbnb/app/lib/: actions.tsx
frontend/nextbnb/app/myfavorites/: page.tsx
frontend/nextbnb/app/myproperties/: page.tsx
frontend/nextbnb/app/myreservations/: page.tsx
frontend/nextbnb/app/service/: apiService.ts
(+6 files in other folders)
